--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>contact</title>
 </head>
-<body style="background-color: skyblue;">
+<body style="background-color: #fff;">
 <h1>
 	WELCOME!
 </h1>
 </h2>
    <p>
-   	<a href="">Home</a>
+   	<a href="index.html">Home</a>
    	<br>
-   	   	<a href="">About</a>
+   	   	<a href="about.html">About</a>
    	   	<br>
-   	   	   	<a href="">Contact</a>
+   	   	   	<a href="contact.html">Contact</a>
    	   	   	<br>
   </p>
 
